feat: Update add-in manifest for direct command execution, add a manual sideloading guide, and include a debugging stop script.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "apa-quote-formatter.js",
   "scripts": {
     "start": "office-addin-debugging start manifest.xml",
+    "stop": "office-addin-debugging stop manifest.xml",
     "start:desktop": "office-addin-debugging start manifest.xml desktop",
     "dev-server": "webpack serve --mode development",
     "build": "webpack --mode production",
