--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,31 @@
 {
   "compilerOptions": {
     /* Configurações de Linguagem */
-    "target": "ES2020",
+    "target": "ES2015",
     "module": "commonjs",
-    "lib": ["ES2020", "DOM"],
-    
+    "lib": [
+      "ES2015",
+      "ES2016",
+      "DOM"
+    ],
     /* Configurações de Módulos */
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    
     /* Configurações de Tipos */
-    "types": ["office-js"],
-    "typeRoots": ["./node_modules/@types"],
-    
+    "types": [
+      "office-js"
+    ],
+    "typeRoots": [
+      "./node_modules/@types"
+    ],
     /* Configurações de Saída */
     "outDir": "./dist",
     "rootDir": "./",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    
     /* Verificações Estritas */
     "strict": true,
     "noImplicitAny": true,
@@ -31,20 +35,17 @@
     "strictPropertyInitialization": true,
     "noImplicitThis": true,
     "alwaysStrict": true,
-    
     /* Verificações Adicionais */
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
-    
     /* Configurações Avançadas */
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": false,
     "checkJs": false,
-    
     /* Experimentais */
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
